[gd_scene load_steps=11 format=2]

[ext_resource path="res://models/nature/nature.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://default_env.tres" type="Environment" id=2]
[ext_resource path="res://characters/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://models/misc/door/door.tscn" type="PackedScene" id=4]
[ext_resource path="res://system/fs/posix_file.gd" type="Script" id=5]
[ext_resource path="res://models/decoration/hints/hint.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/level_1/level_1.gd" type="Script" id=7]
[ext_resource path="res://models/ui/movement_hints/movement_hints.tscn" type="PackedScene" id=8]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 3, 2.5 )

[node name="BaseLevel" type="Spatial"]
script = ExtResource( 7 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
cell_size = Vector3( 1, 1, 1 )
cell_center_y = false
data = {
"cells": PoolIntArray( 0, 0, 1, 65536, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131070, 0, 0, 131071, 0, 0, -1769472, 0, 1, -1703936, 0, 1, -1638400, 0, 1, -1572864, 0, 1, -1507328, 0, 536870913, -1441792, 0, 1, -1376256, 0, 1, -1310720, 0, 536870913, -1245184, 0, 536870913, -1179648, 0, 1, -1114112, 0, 1, -1048576, 0, 536870913, -983040, 0, 536870913, -917504, 0, 1, -851968, 0, 1, -786432, 0, 1, -720896, 0, 1, -655360, 0, 1, -589824, 0, 1, -524288, 0, 1, -458752, 0, 536870913, -393216, 0, 1, -327680, 0, 1, -262144, 0, 1, -196608, 0, 1, -131072, 0, 536870913, -65536, 0, 536870913, 65536, 1, 536870912, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 131065, 1, 0, 131066, 1, 0, 131067, 1, 0, 131070, 1, 536870912, 131071, 1, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65546, 2, 536870912, 65547, 2, 0, 65548, 2, 0, 131065, 2, 0, 131066, 2, 0, 131067, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 131065, 3, 0, 131066, 3, 0, 131067, 3, 0, 131070, 3, 0, 131071, 3, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 131065, 4, 0, 131066, 4, 0, 131067, 4, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 131065, 5, 0, 131066, 5, 0, 131067, 5, 0, 65536, 6, 0, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 131065, 6, 0, 131066, 6, 0, 131067, 6, 0, 131068, 6, 0, 131069, 6, 0, 131070, 6, -1073741824, 131071, 6, 0, 65536, 7, 0, 65537, 7, 0, 65538, 7, 0, 65539, 7, 0, 65540, 7, 0, 65541, 7, 0, 65542, 7, 0, 65543, 7, 0, 65544, 7, 0, 65545, 7, 0, 65546, 7, 0, 65547, 7, 0, 65548, 7, 0, 131065, 7, 0, 131066, 7, 0, 131067, 7, 0, 131068, 7, 0, 131069, 7, 0, 131070, 7, 0, 131071, 7, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 131065, 8, 0, 131066, 8, 0, 131067, 8, 0, 131068, 8, 0, 131069, 8, 0, 131070, 8, 0, 131071, 8, 0, 0, 11, 1, 65536, 11, 1, 131072, 11, 1, 196608, 11, 1, -458752, 11, 1, -393216, 11, 1, -327680, 11, 1, -262144, 11, 1, -196608, 11, 1, -131072, 11, 1, -65536, 11, 1, 65536, 12, 1, -1179648, 12, 1, -1114112, 12, 1, -1048576, 12, 1, -983040, 12, 1, -917504, 12, 1, -851968, 12, 1, -786432, 12, 1, -720896, 12, 1, -655360, 12, 1, -589824, 12, 1, -524288, 12, 1, -458752, 12, 1, -393216, 12, 1, -327680, 12, 1, -262144, 12, 1, -196608, 12, 1, -131072, 12, 1, -65536, 12, 1, -524288, 13, 1, -458752, 13, 1, -327680, 13, 1, -262144, 13, 1, -196608, 13, 1, 0, 65520, 1, 65536, 65520, 1, 131072, 65520, 1, 196608, 65520, 1, 262144, 65520, 1, 327680, 65520, 1, 393216, 65520, 1, 458752, 65520, 1, 524288, 65520, 1, 589824, 65520, 1, 655360, 65520, 1, 720896, 65520, 1, 786432, 65520, 1, 851968, 65520, 1, 917504, 65520, 1, 983040, 65520, 1, 1048576, 65520, 536870913, -2686976, 65520, 1, -2621440, 65520, 1, -2555904, 65520, 1, -2490368, 65520, 1, -2424832, 65520, 1, -2359296, 65520, 1, -2293760, 65520, 1, -2228224, 65520, 1610612737, -2162688, 65520, 1, -2097152, 65520, 1, -2031616, 65520, 1, -1966080, 65520, 1, -1900544, 65520, 536870913, -1835008, 65520, 536870913, -1769472, 65520, 1, -1703936, 65520, 1, -1638400, 65520, 536870913, -1572864, 65520, 1, -1507328, 65520, 1, -1441792, 65520, 1, -1376256, 65520, 1, -1310720, 65520, 1, -1245184, 65520, 1, -1179648, 65520, 1, -1114112, 65520, 1, -1048576, 65520, 1, -983040, 65520, 1, -917504, 65520, 1, -851968, 65520, 1, -786432, 65520, 1, -720896, 65520, 1, -655360, 65520, 1, -589824, 65520, 1, -524288, 65520, 1, -458752, 65520, 1, -393216, 65520, 1, -327680, 65520, 1, -262144, 65520, 1, -196608, 65520, 1073741825, -131072, 65520, 1, -65536, 65520, 1610612737, 65546, 65527, 0, 65547, 65527, 0, 65548, 65527, 0, -2686977, 65527, 1073741825, -2621441, 65527, 1, -2555905, 65527, 1, -2490369, 65527, 1, -2424833, 65527, 1, -2359297, 65527, 1, -2293761, 65527, 1, -2228225, 65527, 1, -2162689, 65527, 1, -2097153, 65527, 1, -2031617, 65527, 1, -1966081, 65527, 536870913, -1900545, 65527, 1, -1835009, 65527, 1, -1769473, 65527, 1, -1703937, 65527, 1, -1638401, 65527, 1, -1572865, 65527, 1, -1507329, 65527, 1, -1441793, 65527, 1, -1376257, 65527, 1, -1310721, 65527, 1, -1245185, 65527, 1, -1179649, 65527, 1, -1114113, 65527, 1, -1048577, 65527, 1, -983041, 65527, -536870911, -917505, 65527, 1, -851969, 65527, 1, -851968, 65527, -536870911, -786433, 65527, 1, -786432, 65527, -536870911, -720897, 65527, -536870911, 65536, 65528, -536870912, 65537, 65528, -536870912, 65538, 65528, -536870912, 65539, 65528, 0, 65540, 65528, -536870912, 65541, 65528, 0, 65542, 65528, 0, 65543, 65528, -536870912, 65546, 65528, 0, 65547, 65528, -536870912, 65548, 65528, -536870912, 131065, 65528, 536870912, 131066, 65528, -536870912, 131067, 65528, 0, 131068, 65528, 0, 131069, 65528, 0, 131070, 65528, 0, 131071, 65528, 0, 393216, 65528, 1, 393217, 65528, -536870911, 458751, 65528, 1, -2686977, 65528, 1, -2621441, 65528, 1, -2555905, 65528, 1, -2490369, 65528, -536870911, -2424833, 65528, 1, -2359297, 65528, 1, -2293761, 65528, 1, -2228225, 65528, -536870911, -2162689, 65528, 1, -2097153, 65528, 536870913, -2031617, 65528, 1, -1966081, 65528, 1, -1900545, 65528, 1, -1835009, 65528, 1, -1769473, 65528, 1610612737, -1703937, 65528, 1, -1638401, 65528, 1, -1572865, 65528, 536870913, -1507329, 65528, 1, -1441793, 65528, -536870911, -1376257, 65528, 1, -1310721, 65528, 1, -1245185, 65528, 1, -1179649, 65528, 536870913, -1114113, 65528, 536870913, -1048577, 65528, 536870913, -983041, 65528, 1, -917505, 65528, 1, -851969, 65528, 1, -851968, 65528, 1, -786433, 65528, 1, -786432, 65528, 1, -720897, 65528, 536870913, 0, 65529, 1, 65536, 65529, 0, 65537, 65529, 1610612736, 65538, 65529, 536870912, 65539, 65529, 536870912, 65540, 65529, 536870912, 65541, 65529, 0, 65542, 65529, 1610612736, 65543, 65529, 1610612736, 65546, 65529, 536870912, 65547, 65529, 536870912, 65548, 65529, 536870912, 131065, 65529, 536870912, 131066, 65529, 536870912, 131067, 65529, 536870912, 131068, 65529, 0, 131069, 65529, 536870912, 131070, 65529, 1610612736, 131071, 65529, 0, 262144, 65529, 536870913, 327680, 65529, 1, 393216, 65529, 1, 393217, 65529, 536870913, 458751, 65529, 536870913, -2686977, 65529, 1, -2621441, 65529, 536870913, -2555905, 65529, 1, -2490369, 65529, 536870913, -2424833, 65529, 536870913, -2359297, 65529, 1, -2293761, 65529, 536870913, -2228225, 65529, 1, -2162689, 65529, 1610612737, -2097153, 65529, 1, -2031617, 65529, 1, -1966081, 65529, 1, -1900545, 65529, 1, -1835009, 65529, 1, -1769473, 65529, 1, -1703937, 65529, 1, -1638401, 65529, 1, -1572865, 65529, 1, -1507329, 65529, 1, -1441793, 65529, 1, -1376257, 65529, 1, -1310721, 65529, 1, -1245185, 65529, 1, -1179649, 65529, 1, -1114113, 65529, 536870913, -1048577, 65529, 1, -983041, 65529, 1, -917505, 65529, 1, -851969, 65529, 1, -851968, 65529, 1, -786433, 65529, 536870913, -786432, 65529, 1, -720897, 65529, 1, -196608, 65529, 1, -131072, 65529, 1, -65536, 65529, 1, 65536, 65530, 536870912, 65537, 65530, 0, 65538, 65530, 0, 65539, 65530, 0, 65540, 65530, 0, 65541, 65530, 0, 65542, 65530, 0, 65543, 65530, 0, 65546, 65530, 0, 65547, 65530, 0, 65548, 65530, 0, 131065, 65530, 0, 131066, 65530, 0, 131067, 65530, 0, 131068, 65530, 0, 131069, 65530, 0, 131070, 65530, 0, 131071, 65530, 0, 393216, 65530, 536870913, 393217, 65530, 1, 458751, 65530, 1, 65541, 65531, 536870912, 65542, 65531, 0, 65543, 65531, 0, 65546, 65531, 0, 65547, 65531, 0, 65548, 65531, 0, 131065, 65531, 0, 131066, 65531, 0, 131067, 65531, 0, 65541, 65532, 0, 65542, 65532, 0, 65543, 65532, 0, 65546, 65532, 0, 65547, 65532, 0, 65548, 65532, 0, 131065, 65532, 0, 131066, 65532, 0, 131067, 65532, 0, 65536, 65533, 0, 65537, 65533, 0, 65538, 65533, 0, 65541, 65533, 0, 65542, 65533, 0, 65543, 65533, 0, 65546, 65533, 0, 65547, 65533, 0, 65548, 65533, 0, 131065, 65533, 0, 131066, 65533, 0, 131067, 65533, 0, 131070, 65533, 0, 131071, 65533, 536870912, -2359302, 65533, 1, -2293766, 65533, 1, -2228230, 65533, 1, -2162694, 65533, 1, -2097158, 65533, 1, -2031622, 65533, 1, -1966086, 65533, 1, -1900550, 65533, 1, -1835014, 65533, 1, -1769478, 65533, 1, -1703942, 65533, 1, -1638406, 65533, 1, -1572870, 65533, 1, -1507334, 65533, 1, -1441798, 65533, 1, -1376262, 65533, 1, -1310726, 65533, 1, -1245190, 65533, 1, -1179654, 65533, 1, -1114118, 65533, 1, -1048582, 65533, 1, -983046, 65533, 1, -917510, 65533, 1, -851974, 65533, 1, -786438, 65533, 1, -720902, 65533, 1, -655366, 65533, 536870913, -589830, 65533, 536870913, -524294, 65533, 1, -458758, 65533, 1, -393222, 65533, 1, -327686, 65533, 1, -262150, 65533, 1, -196614, 65533, 1, 65536, 65534, 0, 65537, 65534, 0, 65538, 65534, 0, 65541, 65534, 0, 65542, 65534, 0, 65543, 65534, 0, 65546, 65534, 0, 65547, 65534, 0, 65548, 65534, 0, 131065, 65534, 0, 131066, 65534, 0, 131067, 65534, 0, 131070, 65534, 0, 131071, 65534, 0, 0, 65535, 1, 65536, 65535, 0, 65537, 65535, 0, 65538, 65535, 0, 65541, 65535, 0, 65542, 65535, 0, 65543, 65535, 0, 65546, 65535, 0, 65547, 65535, 0, 65548, 65535, 0, 131065, 65535, 0, 131066, 65535, 0, 131067, 65535, 0, 131070, 65535, 0, 131071, 65535, 0, -131072, 65535, 1, -65536, 65535, 1 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( -1, 1, 4 )
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 10, 10, 0 )
light_energy = 2.0
__meta__ = {
"volumetric": 1.0
}

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 1.35, 1.73822, -1.05 )

[node name="MovementHints" parent="Player" instance=ExtResource( 8 )]
transform = Transform( 0.37, 0, 0, 0, 0.37, 0, 0, 0, 0.37, 0, 0, 0 )

[node name="Hint" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.25, 0, 0, 0, -1.09278e-08, 0.25, 0, -0.25, -1.09278e-08, 3.6, 1.3, 6.6 )
hint_text = "Use 'h' 'j' 'k' 'l' to move."

[node name="Door" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 1, -10 )

[node name="Screen" parent="Door" index="1"]
texture = SubResource( 1 )

[node name="GridMap" parent="Door" index="3"]
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 536870912, 2, 0, 1, 65534, 0, 536870913, 65535, 0, 0, 65538, 0, 1, 131070, 0, 1, 131074, 0, 1, 196606, 0, 1, 196608, 0, 1, 196609, 0, 1, 196610, 0, 1, 262142, 0, 1, 262143, 0, 1, 262144, 0, 1, 262145, 0, 1, 262146, 0, 1, 327678, 0, 1, 327679, 0, 1, 327680, 0, 1, 327681, 0, 1, 327682, 0, 1, 393214, 0, 1, 393215, 0, 1 )
}

[node name="Doorway" parent="Door" index="4"]
collision_layer = 0
collision_mask = 0

[node name="PosixFile" type="Node" parent="Door"]
script = ExtResource( 5 )
file_name = "zimba"
dir_name = "/usr/lib"
user_permissions = 7
group_permissions = 7
others_permissions = 7
file_type = 16384

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -7.5 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Door/BackArea" to="." method="_on_BackArea_body_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]

[editable path="Door"]
